--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -99,42 +99,42 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			%One could say that...Maybe erase that out or say "A often missconsumption is.."
 			\subsubsection{Java}
 			\leavevmode\newline
-			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interpretes it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to browser on the client side. The Java code is send with the the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
+			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interprets it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to the browser on the client side. The Java code is sent with the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
 			\subsubsection{JavaScript Engines} \leavevmode\newline
 			While it would have been possible to couple the handling of JavaScript to the browser engine, every major browser uses a dedicated script engine. This is due to the fact, that JavaScript, while originally created for use in web browsers, is now also used elsewhere. In the web browser these two engines interact with each other through the shared DOM data structure.
-			The first JS engines started with bare interpreters and evolved to full engines with several additional features. The first JavaScript engine was developed by Brendan Eich, co-founder of the Mozilla project, in 1995 for \textit{Netscape}. It was a bare interpreter for the language he was inventing at this time. The first modern JavaScript engine was Googles V8 engine, created for Chrome in 2008. The key innovations was just-in-time compilation, boosting performance significantly. As a result other browser vendors had to overhaul their interpreters to develop into full JavaScript engines. This lead to the development of the Nitro engine for Apples \textit{Safari} browser. Mozilla used portions of Nitro to improve SpiderMonkey, which resulted from Brendan Eichs original JavaScript interpreter. Opera replaced their interpreter with their Carakan engine, also boosting performance significantly.
+			The first JS engines started with bare interpreters and evolved to full engines with several additional features. The first JavaScript engine was developed by Brendan Eich, co-founder of the Mozilla project, in 1995 for \textit{Netscape}. It was a bare interpreter for the language he was inventing at this time. The first modern JavaScript engine was Googles V8 engine, created for Chrome in 2008. The key innovations were just-in-time compilation, boosting performance significantly. As a result other browser vendors had to overhaul their interpreters to develop into full JavaScript engines. This leads to the development of the Nitro engine for Apples \textit{Safari} browser. Mozilla used portions of Nitro to improve SpiderMonkey, which resulted from Brendan Eichs original JavaScript interpreter. Opera replaced their interpreter with their Carakan engine, also boosting performance significantly.
 			Since 2017 all major browser have added support for WebAssembly to their JavaScript engines. This gives the ability to execute pre-compiled scripts for performance-critical parts of the web page. The code is executed in the same sandbox as the regular JS code.[20]
 			
 		\subsection{Features}
 			\subsubsection{Incognito mode}
 			\leavevmode\newline
-			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browser have some form of private browsing.[21]
+			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browsers have some form of private browsing.[21]
 			\subsubsection{Bookmarks}
 			\leavevmode\newline
-			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, altough called hotlists back then. Newer browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.[22]
+			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, although called hotlists back then. Moderner browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.[22]
 			\subsubsection{Browser Extensions}
 			\leavevmode\newline
-			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also added extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Nowadays most browsers support extensions to customize the user experience.[23]
+			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also included extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Currently most browsers support extensions to customize the user experience.[23]
 			\subsubsection{Tabs}
 			\leavevmode\newline
-			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.[24]
+			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantially different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was, however, Firefox or more specifically its predecessor \textit{Phoenix}.[24]
 		\subsection{Evolution Overview}
 		\begin{center}
 		\includegraphics[scale=0.205]{PanoramaEvoOfBr.JPEG}
 		Evolution of the Browser [25]
 		\end{center}
 	\section{Future of the Browser}
-	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
+	Nowadays there are already many ways to interact with a browser which seems rather futuristic. You can control via voice or by hand gestures. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air in front of you.
 		\subsection{Browsers becoming operating systems}
-	One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
-	An good example for a website supporting Alan Kay's vision is lively-web.org an open source web programming evironment.
-	Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere without having to install any software.
-	[26]
+	One of Alan Kay's primary criticisms about the Web is the absence of a computational ability for the browser. His vision is for them to be like mini-operating systems and being able to execute locally. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the proper direction. Another part is to establish websites to be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
+	A good example for a website supporting Alan Kay's vision is lively-web.org an open source web programming environment.
+	Everything that is displayed on the website represents an object and can be changed, moved or overwritten and provides immediate feedback to the user. Every text field is able to execute JavaScript. You can create your own website or application and are capable to edit and download it from everywhere without having to install any software.
+	[16][26]
 		\subsection{New technologies}
-		New technologies are constantly thrown on the market and Browsers always have to find a way to make them them accessible to the web with bringing as many features as possible from other devices and new ones that fit the device
+		New technologies are constantly thrown on the market and Browsers always have to find a way to make them accessible to the web with bringing as many features as possible from other devices and new ones that fit to the device.
 			\subsubsection{WebVR Browsers}
 				\leavevmode\newline
-				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[23]
+				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate, the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themselves and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow displaying websites not like a 2D Sheet but rather like a 3D environment without having to download content. These environments can represent experiences, like walking in a desert, games or creative activities like 3D painting as seen in the second picture.[23]
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
 				[27]	Firefox Reality
@@ -143,7 +143,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\end{center}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
-				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
+				Just like normal Browsers is an AR Browser an appliciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
 				[29]
 			\subsubsection{Smartwatches}
 			\leavevmode\newline
