--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -157,9 +157,9 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		Another prominent topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to assure security for its customers and stay competitive on the market.
 			[32]
 		\subsection{Next for Browsers}
-			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usability. These attributes with growing in the future as well for sure.
+			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usability. These attributes will grow in the future as well, for sure.
 			Opera formulated a concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon remains up until now a work in progress.
-			%TODO:"These attributes with growing in the..." was ist gemeint.%
+			But at the same time the vision of Alan Key has yet to be met.
 		 	\begin{center}
 		 		\includegraphics[scale=0.35]{OperaNeon.png}
 		 		Startscreen of Opera Neon
