Corrected one more thing

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -95,7 +95,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The web-browser is being used by the server of the website to save text information on the Computer of the client. These have made it possible to save login and shopping cart informations but as well made webtracking possible. Later they received criticism for being able to damage the users privacy and threatening security when surfing the web. Under the EU's GDPR Law websites are now forced, now ask and inform users about saving data in their Browser.[16]
 			\subsubsection{SSL}
 			\leavevmode\newline
-			SSL is short for Secure Sockets Layers, which was an introduction of a security system in the Web. A often missconsumption is SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
+			SSL is short for Secure Sockets Layers, which was an introduction of a security system in the Web. A often missconsumption is SSL would be an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
 			\subsubsection{Java}
 			\leavevmode\newline
 			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interprets it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to the browser on the client side. The Java code is sent with the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
