Moved abstract text to summery, moxed them together and continued Moved introducton text from "History and Evo..." to abstract and add more text information

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -17,13 +17,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 \maketitle
 
 	\begin{abstract}
-		The first browser was introduced in 1990, by Tim Berners-Lee, and was its purpose it was to act as an editor for HTML and to view the contents of the Web. After that, the number of different browser increased shortly and the plain text-based browser where replaced by graphical browser. How will the browser change in the future? This paper might give a glimpse to the answer of this question, based on the history of the browser and how it evolved.
+			The report contains the history of the browsers and massive improvements to the web through some of these browsers. Beginning with the first appeared Browsers and how it came to their creation, it continues with describing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. At last this report will discuss the future of the browsers. The
+			goal of this report is it to create a summary of the history and evolution of browsers from the beginning till modern times and what might change after that. For that multiple websites, papers and books were used for source material and summerized into these articles. The report is meant to be for professors and student alike but furthermore for people without much information technology knowledge to inform themself about this application which is one of the most important on any operating system since many years.
 	\end{abstract}
 
-	\section{Introduction}
-		\subsection{History and Evolution of the Browser}
-		The report contains the history of the browsers and massive improvements to the web through some of these browsers. It continues with describing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
-		\subsection{What is a Browser}
+	\section{Definition}
 		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessible. A browser allows you to navigate websites and perform activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using.
 		%Book site 52,https://de.wikipedia.org/wiki/Webbrowser
 	\section{History}
@@ -167,8 +165,10 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		 	
 			Even though the steps are modest, Browsers are becoming more and more like operating systems and with that closer to the initial vision of Alan Key. But they still have a long way to develop since they were not designed for that purpose.
 			Web 3.0 which is supposed to support the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can not be determined at this stage. We might indeed observe a completely experimental type but if so it needs to be initiated by one of the major browser companies.[33]
-	\section{Conclusion}
-	In summary, this paper started with the history of most important browsers; for example Nexus, Netscape and others. The next topic was included the basic technologies of the browser, namely HTTP, HTML and URL, as well as the Patches of the Web introduced by browsers and basic features of the browsers, like Tabs, Bookmarks or the Incognito mode. And finally the paper took a glimpse into a possible future of the browsers, wwith VR, AR or Quantum computing.
+	\section{Conclusion}	
+	The first browser was introduced in 1990, by Tim Berners-Lee and was its purpose it was to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of the browser, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, like Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report took a look at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
+	The Browser is an application which can not be forgotten on any modern operating system these days as it is one of the standard programs to be already installed. The way we are connected nowdays is based on that software. After the user installed a operating system one of the first actions is to open the browser. It opens the user up to the rest of the world.
+	But it is expected to become from an application eventually to a full-grown operating system itself throughout its Evolution to fulfill the vision of Alan Key.
 	\section{Sources}
 	[1] \url{https://crossbrowsertesting.com/blog/test-automation/history-of-web-browsers/}, used 22.04.2019
 	\newline
