Corrected grammar of abstract

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -18,7 +18,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\begin{abstract}
 			The report contains the history of the browsers and massive improvements to the web through some of these browsers. Beginning with the first appeared Browsers and how it came to their creation, it continues with describing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. At last this report will discuss the future of the browsers. The
-			goal of this report is it to create a summary of the history and evolution of browsers from the beginning till modern times and what might change after that. For that multiple websites, papers and books were used for source material and summerized into these articles. The report is meant to be for professors and student alike but furthermore for people without much information technology knowledge to inform themself about this application which is one of the most important on any operating system since many years.
+			goal of this report is it to create a summary of the history and evolution of browsers from the beginning till modern times and what might change after that. For that, multiple websites, papers and books were used for source material and summerized into these articles. The report is meant to be for professors and student alike but furthermore for people without much information technology knowledge to inform themselves about this application which is one of the most important on any operating system for many years.
 	\end{abstract}
 
 	\section{Definition}
