changed little faults in summary

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -93,7 +93,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The web-browser is being used by the server of the website to save text information on the Computer of the client. These have made it possible to save login and shopping cart informations but as well made webtracking possible. Later they received criticism for being able to damage the users privacy and threatening security when surfing the web. Under the EU's GDPR Law websites are now forced, now ask and inform users about saving data in their Browser.[16]
 			\subsubsection{SSL}
 			\leavevmode\newline
-			SSL is short for Secure Sockets Layers, which was an introduction of a security system in the Web. A often missconsumption is SSL would be an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
+			SSL is short for Secure Sockets Layers, which was an introduction of a security system in the Web. A often missconsumption is that SSL would be an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
 			\subsubsection{Java}
 			\leavevmode\newline
 			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interprets it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to the browser on the client side. The Java code is sent with the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
@@ -166,7 +166,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			Even though the steps are modest, Browsers are becoming more and more like operating systems and with that closer to the initial vision of Alan Key. But they still have a long way to develop since they were not designed for that purpose.
 			Web 3.0 which is supposed to support the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can not be determined at this stage. We might indeed observe a completely experimental type but if so it needs to be initiated by one of the major browser companies.[33]
 	\section{Conclusion}	
-	The first browser was introduced in 1990, by Tim Berners-Lee and was its purpose it was to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of the browser, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, like Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report took a look at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
+	The first browser was introduced in 1990, by Tim Berners-Lee and its purpose was to act as an editor for HTML and to view the contents of the Web. After that, the number of different browsers increased shortly and the plain text-based browser was replaced by the graphical browser. The next topic included the basic technologies of all browsers, namely HTTP, HTML and URL, as well as the Patches of the Web. Basic features of the browsers, like Tabs, Bookmarks or the Incognito mode were introduced. Finally, the report took a look at modern and newer technologies which showed how browsers constantly need to reinvent themselves to stay relevant for the future.
 	The Browser is an application which can not be forgotten on any modern operating system these days as it is one of the standard programs to be already installed. The way we are connected nowdays is based on that software. After the user installed a operating system one of the first actions is to open the browser. It opens the user up to the rest of the world.
 	But it is expected to become from an application eventually to a full-grown operating system itself throughout its Evolution to fulfill the vision of Alan Key.
 	\section{Sources}
