--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -39,7 +39,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Internet Explorer}
 		\textit{Internet Explorer 1.0} (furthermore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territory. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was in addition the first true competitor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', indicating the first browser most people interacted with after they bought a new PC was IE and not Netscape [6]. With that IE dethroned Netscape as the most used browser. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competitors to emerge and evolve.
 		\subsection{Mozilla Firefox}
-		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is the unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released on 9 November 2004. Shortly before the release of the first full version Mozilla gained a bunch of new users, because of the warning from the US goverment against the exploit in IE. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on 31 March 1998 in the attempt of Netscape Communications to get more programmers that could improve the code and help defeat Microsoft in the \textbf{Browser Wars}. Unfortunately that was not enough to save Netscape. But it does not mean that Mozilla Firefox was going down with Netscape. The reason behind this was because \textit{Mozilla Firefox} had already its standalone browser, with a big community and enough  programmers  to keep working on the browser [7] [8]. Another reason is the browser was back financially by many investors and the Mozilla Corpration, which was founded as a totally owned branch of the Mozilla Foundation. Nowadays Firefox is still fairly popular browser with 6-8, even while Safari and Google Chrome have a bigger market share.
+		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is the unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released on 9 November 2004. Shortly before the release of the first full version Mozilla gained a bunch of new users, because of the warning from the US goverment against the exploit in IE. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on 31 March 1998 in the attempt of Netscape Communications to get more programmers that could improve the code and help defeat Microsoft in the \textbf{Browser Wars}. Unfortunately that was not enough to save Netscape. But it does not mean that Mozilla Firefox was going down with Netscape. The reason behind this was because \textit{Mozilla Firefox} had already its standalone browser, with a big community and enough  programmers  to keep working on the browser [7] [8]. Another reason is the browser was backed financially by many investors and the Mozilla Corpration, which was founded as a totally owned branch of the Mozilla Foundation. Nowadays Firefox is still fairly popular browser with 6-8, even while Safari and Google Chrome have a bigger market share.
 		\subsection{Opera}
 		\textit{Opera} is one of the oldest browsers at present, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained enough popularity with version 2.1, which was in the on 9 December 1996 and introduced features like keyboard shortcuts, zoom and sessions [9].
 		\subsection{Safari}
