Changed Next for browsers to next steps for Browsers

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -155,7 +155,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\leavevmode\newline
 		Another prominent topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and external servers. That explains the reason why, since a couple of years institutes around the world, have been looking for algorithms, that are post-quantum secures. It is indicated, that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays such as RSA. Browsers will need to adapt to these changes in order to assure security for its customers and stay competitive in the market.
 			[32]
-		\subsection{Next for Browsers}
+		\subsection{Next steps for Browsers}
 			Since the introduction of the browser many changes have been made. It gained on speed, performance, security and usability. These attributes will certainly grow in the future.
 			Opera formulated a concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, yet Opera Neon remains a work in progress until now.
 		 	\begin{center}
