--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -43,7 +43,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Opera}
 		\textit{Opera} is one of the oldest browsers at present, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained enough popularity with version 2.1, which was in the on 9 December 1996 and introduced features like keyboard shortcuts, zoom and sessions [9].
 		\subsection{Safari}
-		\textit{Safari} is a browser exclusively developed for iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is strugglin to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. The most recent version is 12.1 of the browser for all iOS systems.[10]
+		\textit{Safari} is a browser exclusively developed for macOS and iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is strugglin to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. The most recent version is 12.1 of the browser for all iOS and macOS systems.[10]
 		\subsection{Google Chrome}
 		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to develop their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well. Google furthermore developed an engine for browsers called Chromium, which many browser competitors slowly start using for their own browsers.[11]
 		\subsection{Tor Browser}
@@ -72,7 +72,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsection{Basic Technological Changes}
 		\subsubsection{HTTP}
 		\leavevmode\newline
-		\textit{HTTP} stands for HyperText Transfer Protocol. It is an application-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: If the client requests a resource, the server replys with information and sometime even with the resource itself [16]. Today one differentiate between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is accompanied by an SSL encryption.
+		\textit{HTTP} stands for HyperText Transfer Protocol. It is an application-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: If the client requests a resource, the server replys with information and sometime even with the resource itself [16]. Today one distinguishes between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is accompanied by an SSL encryption.
 		\subsubsection{HTML}
 		\leavevmode\newline
 		\textit{HTML} is the abbreviation for HyperText Markup Language. Tim Berners-Lee made this textual format for annotating plain text with informations part of his original Web proposal, and created the first editor and at the same time the first browser around HTML. The first proposal for HTML is dated back to 1993, but today HTML 5 exists; which was standardized in 2014. [16]
